<resources>
    <string name="app_name">WhatsApp Message</string>
    <string name="enter_message">Enter message</string>
    <string name="submit">Submit</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="app_title">Send WhatsApp Message</string>
    <string name="creator_name">&#160;&#160;Sagar Dhone</string>
    <string name="created_by">created by </string>
    <string name="no_internet">No internet connection!</string>
    <string name="no_internet_message">Please turn on internet without internet we can Proceed.</string>

</resources>