<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/app_title"
            android:textColor="#075E54"
            android:textIsSelectable="false"
            android:textSize="30sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">



            <com.hbb20.CountryCodePicker
                android:id="@+id/country_code_picker"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                app:ccp_autoDetectCountry="true"
                app:ccp_rippleEnable="true"
                app:ccp_showNameCode="true"
                app:ccp_textSize="16sp" />


            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/enter_phone_number"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:textSize="20sp"
                    app:counterEnabled="true"
                    app:counterMaxLength="20" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/enter_message"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/message_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxHeight="120dp"
                android:maxLength="11"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>






        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_custom"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


        <LinearLayout
            android:id="@+id/name_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/crated_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created_by"
                android:textSize="11sp" />


            <TextView
                android:id="@+id/creator_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creator_name"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>


    </RelativeLayout>
